--- a/Quiz/quiznew.html
+++ b/Quiz/quiznew.html
@@ -1,69 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Indian Geography Quiz Generator (PyScript)</title>
-    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-    <script defer src="https://pyscript.net/latest/pyscript.js"></script>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 24px; }
-        #output { white-space: pre-wrap; background: #f8f8f8; padding: 12px; border-radius: 6px; }
-        button { margin: 10px 0; }
-    </style>
+  <meta charset="UTF-8">
+  <title>Random 5 Quiz - Chanakya Academy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body { font-family: Arial, sans-serif; background: #f4f4f4; padding: 20px; }
+    .quiz-container { background: #fff; padding: 24px; max-width: 600px; margin: 40px auto; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.08); }
+    .question { font-size: 1.2em; margin-bottom: 18px; }
+    .options { margin-bottom: 16px; }
+    .options button { display: block; width: 100%; padding: 10px; margin: 6px 0; border: none; background: #e2e2e2; cursor: pointer; border-radius: 4px; font-size: 1em; }
+    .options button:hover, .options button:focus { background: #d4d4d4; outline: 2px solid #007bff; }
+    .result { font-size: 1.1em; margin-top: 20px; }
+    .score { font-weight: bold; color: #1a8917; }
+    .next-btn { margin-top: 16px; padding: 10px 18px; font-size: 1em; border: none; border-radius: 4px; background: #007bff; color: #fff; cursor: pointer; }
+    .next-btn:disabled { background: #aaa; }
+    .tip { margin-top: 10px; color: #007b83; font-style: italic; }
+    #heatmap { margin-top: 30px; }
+    .heatmap-bar { height: 22px; border-radius: 5px; margin: 5px 0; color: #fff; padding-left: 10px; line-height: 22px; font-weight: bold; }
+    #downloadPdfBtn { margin-top: 18px; padding: 10px 18px; font-size: 1em; border: none; border-radius: 4px; background: #28a745; color: #fff; cursor: pointer; }
+    #downloadPdfBtn:disabled { background: #aaa; }
+  </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-    <h2>Indian Geography Quiz Generator (PyScript)</h2>
-    <label>Questions per Region: <input type="number" id="per_region" value="5" min="1" max="100"/></label>
-    <button py-click="generate_quiz">Generate Quiz</button>
-    <button py-click="download_json">Download JSON</button>
-    <div id="output"></div>
+  <div class="quiz-container" id="quizContainer">
+    <div id="question" class="question"></div>
+    <div id="options" class="options"></div>
+    <div id="result" class="result"></div>
+    <div id="tip" class="tip"></div>
+    <button id="nextBtn" class="next-btn" style="display:none;">Next</button>
+    <button id="downloadPdfBtn" style="display:none;">Download PDF</button>
+    <div id="heatmap"></div>
+  </div>
+  <script>
+    let allQuestions = [];
+    let quizQuestions = [];
+    let currentQuestion = 0;
+    let score = 0;
+    let answered = false;
+    let sectionStats = {};
+    let userAnswers = [];
 
-    <py-script>
-import json
-from js import document, Blob, URL
+    // Fisher-Yates shuffle
+    function shuffle(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+      return array;
+    }
 
-regions = [
-    {"name": "North India"},
-    {"name": "South India"},
-    {"name": "East India"},
-    {"name": "West India"},
-    {"name": "Central India"},
-    {"name": "Northeast India"}
-]
+    async function fetchQuestions() {
+      try {
+        const res = await fetch('https://leadsindia.github.io/Chankya-Academy/Quiz/Questions.json');
+        allQuestions = await res.json();
+        if (!Array.isArray(allQuestions) || allQuestions.length === 0) {
+          throw new Error("No questions found.");
+        }
+        startQuiz();
+      } catch (e) {
+        document.getElementById('quizContainer').innerHTML = "<p>Could not load questions. Please try again later.</p>";
+      }
+    }
 
-all_questions = []
+    function pickRandomQuestions(n) {
+      const shuffled = shuffle([...allQuestions]);
+      return shuffled.slice(0, n);
+    }
 
-def generate_quiz(*args, **kwargs):
-    global all_questions
-    per_region = int(document.getElementById("per_region").value)
-    all_questions = []
-    for region in regions:
-        for i in range(1, per_region+1):
-            q = {
-                "region": region["name"],
-                "question": f"{region['name']} Sample Question {i}",
-                "options": [f"Option A{i}", f"Option B{i}", f"Option C{i}", f"Option D{i}"],
-                "answer": f"Option A{i}"
-            }
-            all_questions.append(q)
-    # Display sample output
-    output = document.getElementById("output")
-    sample = json.dumps(all_questions[:min(5, len(all_questions))], indent=2)
-    output.innerText = f"Generated {len(all_questions)} questions.\\nSample:\\n{sample}"
+    function showQuestion() {
+      answered = false;
+      const q = quizQuestions[currentQuestion];
+      document.getElementById('question').textContent = `Q${currentQuestion+1}: ${q.question}`;
+      const optionsDiv = document.getElementById('options');
+      optionsDiv.innerHTML = '';
+      q.options.forEach((option, idx) => {
+        const btn = document.createElement('button');
+        btn.type = 'button';
+        btn.textContent = option;
+        btn.onclick = () => checkAnswer(idx, btn);
+        optionsDiv.appendChild(btn);
+      });
+      document.getElementById('result').textContent = '';
+      document.getElementById('tip').textContent = '';
+      document.getElementById('nextBtn').style.display = 'none';
+      document.getElementById('downloadPdfBtn').style.display = 'none';
+      document.getElementById('heatmap').innerHTML = '';
+    }
 
-def download_json(*args, **kwargs):
-    if not all_questions:
-        generate_quiz()
-    json_str = json.dumps(all_questions, indent=2)
-    blob = Blob.new([json_str], { "type": "application/json" })
-    url = URL.createObjectURL(blob)
-    link = document.createElement("a")
-    link.href = url
-    link.download = "indian_geography_questions.json"
-    document.body.appendChild(link)
-    link.click()
-    document.body.removeChild(link)
-    URL.revokeObjectURL(url)
-    </py-script>
+    function checkAnswer(selectedIdx, btn) {
+      if (answered) return;
+      answered = true;
+      const q = quizQuestions[currentQuestion];
+      const optionsDiv = document.getElementById('options');
+      Array.from(optionsDiv.children).forEach((b, idx) => {
+        b.disabled = true;
+        if(idx === q.answer) b.style.background = '#a5d6a7';
+        if(idx === selectedIdx && idx !== q.answer) b.style.background = '#ef9a9a';
+      });
+      let correct = false;
+      if (selectedIdx === q.answer) {
+        document.getElementById('result').innerHTML = '<span style="color:green;">Correct!</span>';
+        score++;
+        correct = true;
+      } else {
+        document.getElementById('result').innerHTML = `<span style="color:red;">Wrong!</span> The correct answer is: <b>${q.options[q.answer]}</b>`;
+      }
+      // Show tip
+      document.getElementById('tip').textContent = q.tip ? `Tip: ${q.tip}` : '';
+      // Track section stats
+      if (!sectionStats[q.section]) sectionStats[q.section] = { correct: 0, total: 0 };
+      sectionStats[q.section].total++;
+      if (correct) sectionStats[q.section].correct++;
+      // Track user answers for PDF
+      userAnswers.push({
+        question: q.question,
+        selected: q.options[selectedIdx],
+        correct: q.options[q.answer],
+        tip: q.tip,
+        section: q.section,
+        isCorrect: correct
+      });
+      document.getElementById('nextBtn').style.display = 'inline-block';
+      if(currentQuestion === quizQuestions.length - 1) {
+        document.getElementById('nextBtn').textContent = "Show Score";
+      } else {
+        document.getElementById('nextBtn').textContent = "Next";
+      }
+    }
+
+    document.getElementById('nextBtn').onclick = function() {
+      currentQuestion++;
+      if(currentQuestion < quizQuestions.length) {
+        showQuestion();
+      } else {
+        showResult();
+      }
+    };
+
+    function showHeatmap() {
+      const heatmapDiv = document.getElementById('heatmap');
+      heatmapDiv.innerHTML = '<h3>Section-wise Performance</h3>';
+      Object.keys(sectionStats).forEach(section => {
+        const { correct, total } = sectionStats[section];
+        const percent = Math.round((correct / total) * 100);
+        let color = '#e74c3c'; // red
+        if (percent >= 80) color = '#27ae60'; // green
+        else if (percent >= 50) color = '#f1c40f'; // yellow
+        heatmapDiv.innerHTML += `
+          <div class="heatmap-bar" style="background:${color}; width:${percent}%; max-width:100%;">
+            ${section}: ${correct} / ${total} (${percent}%)
+          </div>
+        `;
+      });
+    }
+
+    function downloadPDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF();
+      doc.setFontSize(16);
+      doc.text('Quiz Results', 10, 10);
+      doc.setFontSize(12);
+      let y = 20;
+      userAnswers.forEach((ans, idx) => {
+        doc.text(`${idx+1}. ${ans.question}`, 10, y);
+        y += 6;
+        doc.text(`Your Answer: ${ans.selected}`, 12, y);
+        y += 6;
+        doc.text(`Correct Answer: ${ans.correct}`, 12, y);
+        y += 6;
+        doc.text(`Section: ${ans.section}`, 12, y);
+        y += 6;
+        if (ans.tip) {
+          doc.text(`Tip: ${ans.tip}`, 12, y);
+          y += 6;
+        }
+        doc.text(`Result: ${ans.isCorrect ? 'Correct' : 'Wrong'}`, 12, y);
+        y += 8;
+        if (y > 270) { doc.addPage(); y = 10; }
+      });
+      doc.save('quiz-results.pdf');
+    }
+
+    function showResult() {
+      document.getElementById('quizContainer').innerHTML =
+        `<h2>Quiz Completed!</h2>
+         <p class="score">Your Score: ${score} / ${quizQuestions.length}</p>
+         <button id="restartBtn" class="next-btn">Restart with New 5</button>
+         <button id="downloadPdfBtn">Download PDF</button>
+         <div id="heatmap"></div>`;
+      document.getElementById('restartBtn').onclick = startQuiz;
+      document.getElementById('downloadPdfBtn').onclick = downloadPDF;
+      showHeatmap();
+    }
+
+    function startQuiz() {
+      quizQuestions = pickRandomQuestions(5);
+      currentQuestion = 0;
+      score = 0;
+      answered = false;
+      sectionStats = {};
+      userAnswers = [];
+      document.getElementById('quizContainer').innerHTML = `
+        <div id="question" class="question"></div>
+        <div id="options" class="options"></div>
+        <div id="result" class="result"></div>
+        <div id="tip" class="tip"></div>
+        <button id="nextBtn" class="next-btn" style="display:none;">Next</button>
+        <button id="downloadPdfBtn" style="display:none;">Download PDF</button>
+        <div id="heatmap"></div>
+      `;
+      document.getElementById('nextBtn').onclick = function() {
+        currentQuestion++;
+        if(currentQuestion < quizQuestions.length) {
+          showQuestion();
+        } else {
+          showResult();
+        }
+      };
+      showQuestion();
+    }
+
+    // Start by fetching questions
+    fetchQuestions();
+  </script>
 </body>
 </html>
