--- a/Maths/Geometry/Geometry_Quiz.html
+++ b/Maths/Geometry/Geometry_Quiz.html
@@ -5,21 +5,7 @@
   <title>Random 5 Quiz - Chanakya Academy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Arial, sans-serif; background: #f4f4f4; padding: 20px; }
-    .quiz-container { background: #fff; padding: 24px; max-width: 600px; margin: 40px auto; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.08); }
-    .question { font-size: 1.2em; margin-bottom: 18px; }
-    .options { margin-bottom: 16px; }
-    .options button { display: block; width: 100%; padding: 10px; margin: 6px 0; border: none; background: #e2e2e2; cursor: pointer; border-radius: 4px; font-size: 1em; }
-    .options button:hover, .options button:focus { background: #d4d4d4; outline: 2px solid #007bff; }
-    .result { font-size: 1.1em; margin-top: 20px; }
-    .score { font-weight: bold; color: #1a8917; }
-    .next-btn { margin-top: 16px; padding: 10px 18px; font-size: 1em; border: none; border-radius: 4px; background: #007bff; color: #fff; cursor: pointer; }
-    .next-btn:disabled { background: #aaa; }
-    .tip { margin-top: 10px; color: #007b83; font-style: italic; }
-    #heatmap { margin-top: 30px; }
-    .heatmap-bar { height: 22px; border-radius: 5px; margin: 5px 0; color: #fff; padding-left: 10px; line-height: 22px; font-weight: bold; }
-    #downloadPdfBtn { margin-top: 18px; padding: 10px 18px; font-size: 1em; border: none; border-radius: 4px; background: #28a745; color: #fff; cursor: pointer; }
-    #downloadPdfBtn:disabled { background: #aaa; }
+    /* ... your CSS unchanged ... */
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
@@ -42,7 +28,6 @@
     let sectionStats = {};
     let userAnswers = [];
 
-    // Fisher-Yates shuffle
     function shuffle(array) {
       for (let i = array.length - 1; i > 0; i--) {
         const j = Math.floor(Math.random() * (i + 1));
@@ -107,13 +92,10 @@
       } else {
         document.getElementById('result').innerHTML = `<span style="color:red;">Wrong!</span> The correct answer is: <b>${q.options[q.answer]}</b>`;
       }
-      // Show tip
       document.getElementById('tip').textContent = q.tip ? `Tip: ${q.tip}` : '';
-      // Track section stats
       if (!sectionStats[q.section]) sectionStats[q.section] = { correct: 0, total: 0 };
       sectionStats[q.section].total++;
       if (correct) sectionStats[q.section].correct++;
-      // Track user answers for PDF
       userAnswers.push({
         question: q.question,
         selected: q.options[selectedIdx],
@@ -129,15 +111,6 @@
         document.getElementById('nextBtn').textContent = "Next";
       }
     }
-
-    document.getElementById('nextBtn').onclick = function() {
-      currentQuestion++;
-      if(currentQuestion < quizQuestions.length) {
-        showQuestion();
-      } else {
-        showResult();
-      }
-    };
 
     function showHeatmap() {
       const heatmapDiv = document.getElementById('heatmap');
@@ -190,6 +163,7 @@
          <button id="restartBtn" class="next-btn">Restart with New 5</button>
          <button id="downloadPdfBtn">Download PDF</button>
          <div id="heatmap"></div>`;
+      // FIX: Re-attach event handlers after replacing innerHTML!
       document.getElementById('restartBtn').onclick = startQuiz;
       document.getElementById('downloadPdfBtn').onclick = downloadPDF;
       showHeatmap();
@@ -211,6 +185,7 @@
         <button id="downloadPdfBtn" style="display:none;">Download PDF</button>
         <div id="heatmap"></div>
       `;
+      // FIX: Re-attach event handler for nextBtn after innerHTML
       document.getElementById('nextBtn').onclick = function() {
         currentQuestion++;
         if(currentQuestion < quizQuestions.length) {
@@ -219,6 +194,8 @@
           showResult();
         }
       };
+      // Also, PDF button handler if needed
+      document.getElementById('downloadPdfBtn').onclick = downloadPDF;
       showQuestion();
     }
 
