--- a/Maths/Geometry/Geometry_Quiz.html
+++ b/Maths/Geometry/Geometry_Quiz.html
@@ -15,14 +15,13 @@
     .score { font-weight: bold; color: #1a8917; }
     .next-btn { margin-top: 16px; padding: 10px 18px; font-size: 1em; border: none; border-radius: 4px; background: #007bff; color: #fff; cursor: pointer; }
     .next-btn:disabled { background: #aaa; }
+    .loading { text-align: center; font-size: 1.2em; color: #555; }
+    .error { color: red; font-size: 1.1em; text-align: center; }
   </style>
 </head>
 <body>
   <div class="quiz-container" id="quizContainer">
-    <div id="question" class="question"></div>
-    <div id="options" class="options"></div>
-    <div id="result" class="result"></div>
-    <button id="nextBtn" class="next-btn" style="display:none;">Next</button>
+    <div class="loading">Loading questions...</div>
   </div>
   <script>
     let allQuestions = [];
@@ -43,10 +42,15 @@
     async function fetchQuestions() {
       try {
         const res = await fetch('https://leadsindia.github.io/Chankya-Academy/Maths/Geometry/Geometry.json');
+        if (!res.ok) throw new Error('HTTP error: ' + res.status);
         allQuestions = await res.json();
+        if (!Array.isArray(allQuestions) || allQuestions.length < 5) {
+          throw new Error("Not enough questions in the question bank.");
+        }
         startQuiz();
       } catch (e) {
-        document.getElementById('quizContainer').innerHTML = "<p>Could not load questions. Please try again later.</p>";
+        document.getElementById('quizContainer').innerHTML = `<div class="error">Could not load questions. Please try again later.<br>${e.message}</div>`;
+        console.error(e);
       }
     }
 
@@ -58,17 +62,27 @@
     function showQuestion() {
       answered = false;
       const q = quizQuestions[currentQuestion];
-      document.getElementById('question').textContent = `Q${currentQuestion+1}: ${q.question}`;
+      document.getElementById('quizContainer').innerHTML = `
+        <div id="question" class="question">Q${currentQuestion+1}: ${q.question}</div>
+        <div id="options" class="options"></div>
+        <div id="result" class="result"></div>
+        <button id="nextBtn" class="next-btn" style="display:none;">Next</button>
+      `;
       const optionsDiv = document.getElementById('options');
-      optionsDiv.innerHTML = '';
       q.options.forEach((option, idx) => {
         const btn = document.createElement('button');
         btn.textContent = option;
         btn.onclick = () => checkAnswer(idx, btn);
         optionsDiv.appendChild(btn);
       });
-      document.getElementById('result').textContent = '';
-      document.getElementById('nextBtn').style.display = 'none';
+      document.getElementById('nextBtn').onclick = function() {
+        currentQuestion++;
+        if(currentQuestion < quizQuestions.length) {
+          showQuestion();
+        } else {
+          showResult();
+        }
+      };
     }
 
     function checkAnswer(selectedIdx, btn) {
@@ -95,15 +109,6 @@
       }
     }
 
-    document.getElementById('nextBtn').onclick = function() {
-      currentQuestion++;
-      if(currentQuestion < quizQuestions.length) {
-        showQuestion();
-      } else {
-        showResult();
-      }
-    };
-
     function showResult() {
       document.getElementById('quizContainer').innerHTML =
         `<h2>Quiz Completed!</h2>
@@ -116,20 +121,6 @@
       currentQuestion = 0;
       score = 0;
       answered = false;
-      document.getElementById('quizContainer').innerHTML = `
-        <div id="question" class="question"></div>
-        <div id="options" class="options"></div>
-        <div id="result" class="result"></div>
-        <button id="nextBtn" class="next-btn" style="display:none;">Next</button>
-      `;
-      document.getElementById('nextBtn').onclick = function() {
-        currentQuestion++;
-        if(currentQuestion < quizQuestions.length) {
-          showQuestion();
-        } else {
-          showResult();
-        }
-      };
       showQuestion();
     }
 
